tests/snapshots/tui_split_select__split_dialog_per_file_selected.snap
---
source: tests/tui_split_select.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::split_select::render(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Refa┌ Split Commit ──────────────────────────────────┐               ",
        "22222222   Add │                                                █               ",
        "               │ 11111111 Refactor parser module                █               ",
        "               │                                                █               ",
        "               │ Choose split strategy:                         █               ",
        "               │                                                █               ",
        "               │ ▸   Per file                                   █               ",
        "               │        Create one commit per changed file      █               ",
        "               │                                                █               ",
        "               │     Split out file                             █               ",
        "               │        Peel one file into its own commit       █               ",
        "               │                                                █               ",
        "               │     Per hunk                                   █               ",
        "               │        Create one commit per diff hunk         █               ",
        "               │                                                █               ",
        "               │     Per hunk group                             █               ",
        "               │        Create one commit per hunk group        █               ",
        "               │                                                █               ",
        "               │     Split out hunk(s)                          █               ",
        "               │        Peel selected hunks into a commit       █               ",
        "               │                                                │               ",
        "               └────────────────────────────────────────────────┘               ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 15, y: 1, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: White, bg: Black, underline: Reset, modifier: DIM,
        x: 48, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 39, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 29, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 58, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 29, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 55, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 20, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 21, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 22, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
